--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>My Website</title>
-
 </head>
 <body>
-   <!--hero Section start-->
+    <!--hero Section start-->
     <div class="hero">
-        
         <nav>
             <h2 class="logo">My Website</h2>
             <ul>
@@ -20,67 +18,63 @@
                 <li><a href="index.html#Contact">Contact</a></li>
             </ul>
         </nav>
-
         <div class="content">
             <h3>Hello, my name is Siti Aisyah binti Abdul Azis</h3>
             <h4>I am UiTM student from class N5CDIM2602A</h4>
         </div>
     </div>
 
-<!--About Me section start-->
-<section class="About Me">
-    <a class="button-two" href="#">About Me</a>
-    <div class="main">
-        <img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgabt.jpg">
-        <div class="About Me-text">
-            <h2> About Me</h2>
-            <h4>Bachelor of Information Science (Hons) Library Management</h4>
-            <p>My name is Siti Aisyah binti Abdul Azis. My birthdate is 18th August 2003.<br>
-                I am a student from UiTM Rembau. My number matrics is 2023663402.<br>
-                I lived at Ampang, Selangor. I have three siblings and I am the eldest daughter.<br>
-                I like to watch Netflix whenever I have free time.</p>
+    <!--About Me section start-->
+    <section class="About Me">
+        <a class="button-two" href="#">About Me</a>
+        <div class="main">
+            <img src="images/imgabt.jpg" alt="About Me Image">
+            <div class="About Me-text">
+                <h2> About Me</h2>
+                <h4>Bachelor of Information Science (Hons) Library Management</h4>
+                <p>My name is Siti Aisyah binti Abdul Azis. My birthdate is 18th August 2003.<br>
+                    I am a student from UiTM Rembau. My number matrics is 2023663402.<br>
+                    I lived at Ampang, Selangor. I have three siblings and I am the eldest daughter.<br>
+                    I like to watch Netflix whenever I have free time.</p>
                 <video width="320" height="240" controls>
                     <source src="vdeoh.mp4" type="video/mp4">
-                  </video>
+                </video>
+            </div>    
+        </div>
+    </section>
 
-        </div>    
-</section>
-
-<!--Education section start-->
-<div class="title">
-    <a class="button-two" href="#">Education</a>
+    <!--Education section start-->
+    <div class="title">
+        <a class="button-two" href="#">Education</a>
         <h2>Education History</h2>
         <table>
-          <tr>
-            <th>2010-2015</th>
-            <th>2016-2020</th>
-            <th>2021-2023</th>
-          </tr>
             <tr>
-              <td><img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsk.jpg"></td>
-              <td> <img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgsmk.jpg"> </td>
-              <td><img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgstjohn.jpg"></td>
+                <th>2010-2015</th>
+                <th>2016-2020</th>
+                <th>2021-2023</th>
             </tr>
             <tr>
-              <td>SK Jalan Raja Muda</td>
-              <td>SMK Puteri Wilayah</td>
-              <td>St. John's Institution</td>
+                <td><img src="images/imgsk.jpg" alt="SK Jalan Raja Muda"></td>
+                <td><img src="images/imgsmk.jpg" alt="SMK Puteri Wilayah"></td>
+                <td><img src="images/imgstjohn.jpg" alt="St. John's Institution"></td>
             </tr>
-          </table>
+            <tr>
+                <td>SK Jalan Raja Muda</td>
+                <td>SMK Puteri Wilayah</td>
+                <td>St. John's Institution</td>
+            </tr>
+        </table>
+    </div>
 
-
-</div>
-    
-
-<!--Contact-->
-<div class="contact">
-    <a class="button-two" href="#">Contact</a>
-    <a href="https://www.instagram.com/ashekboo?igsh=YzVxaTlhdHBkMWVo">Follow my Instagram</a>
-    <a aria-label="Chat on WhatsApp" href="https://wa.me/+60183767825">Chat on WhatsApp</a>
-    <p><a href="mailto:aisyah.abdulazis@gmail.com">Send email</a></p>
+    <!--Contact-->
+    <div class="contact">
+        <a class="button-two" href="#">Contact</a>
+        <a href="https://www.instagram.com/ashekboo?igsh=YzVxaTlhdHBkMWVo">Follow my Instagram</a>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/+60183767825">Chat on WhatsApp</a>
+        <p><a href="mailto:aisyah.abdulazis@gmail.com">Send email</a></p>
     </div>
     <footer>
-      <p>&copy; 2024 My Website. All rights reserved.</p>
-  </footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
