--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <th>2021-2023</th>
             </tr>
             <tr>
-                <td><img src="images/imgsk.jpg" alt="SK Jalan Raja Muda"></td>
-                <td><img src="images/imgsmk.jpg" alt="SMK Puteri Wilayah"></td>
-                <td><img src="images/imgstjohn.jpg" alt="St. John's Institution"></td>
+                <td><img src="imgsk.jpg" alt="SK Jalan Raja Muda"></td>
+                <td><img src="imgsmk.jpg" alt="SMK Puteri Wilayah"></td>
+                <td><img src="imgstjohn.jpg" alt="St. John's Institution"></td>
             </tr>
             <tr>
                 <td>SK Jalan Raja Muda</td>
