--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="About Me">
         <a class="button-two" href="#">About Me</a>
         <div class="main">
-            <img src="images/imgabt.jpg" alt="About Me Image">
+            <img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgabt.jpg" alt="About Me Image">
             <div class="About Me-text">
                 <h2> About Me</h2>
                 <h4>Bachelor of Information Science (Hons) Library Management</h4>
@@ -54,9 +54,9 @@
                 <th>2021-2023</th>
             </tr>
             <tr>
-                <td><img src="imgsk.jpg" alt="SK Jalan Raja Muda"></td>
-                <td><img src="imgsmk.jpg" alt="SMK Puteri Wilayah"></td>
-                <td><img src="imgstjohn.jpg" alt="St. John's Institution"></td>
+                <td><img src="images/imgsk.jpg" alt="SK Jalan Raja Muda"></td>
+                <td><img src="images/imgsmk.jpg" alt="SMK Puteri Wilayah"></td>
+                <td><img src="images/imgstjohn.jpg" alt="St. John's Institution"></td>
             </tr>
             <tr>
                 <td>SK Jalan Raja Muda</td>
