--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="About Me">
         <a class="button-two" href="#">About Me</a>
         <div class="main">
-            <img src="C:\Users\user\OneDrive - Universiti Teknologi MARA\Documents\UITM\SEM 2\IML470\WEBSITE\imgabt.jpg" alt="About Me Image">
+            <img src="imgabt.jpg" alt="About Me Image">
             <div class="About Me-text">
                 <h2> About Me</h2>
                 <h4>Bachelor of Information Science (Hons) Library Management</h4>
